# crazyqc

./: Cargo.toml  Readme.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: msrv.yml
crazyqc/: all.html  index.html  sidebar-items.js
crazyqc/cli/: fn.i82level.html  fn.set_nb_threads.html  index.html  sidebar-items.js  struct.Command.html
crazyqc/error/: enum.Error.html  index.html  sidebar-items.js
crazyqc/input/: index.html  sidebar-items.js
crazyqc/input/bam/: fn.worker.html  index.html  sidebar-items.js  struct.Bam.html
crazyqc/input/fastq/: fn.worker.html  index.html  sidebar-items.js  struct.Fastq.html
implementors/clap/derive/: trait.Args.js  trait.Clap.js  trait.FromArgMatches.js  trait.IntoApp.js  trait.Parser.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: cli.rs  error.rs  lib.rs
src/crazyqc/: cli.rs.html  error.rs.html  lib.rs.html
src/crazyqc/input/: bam.rs.html  fastq.rs.html  mod.rs.html
src/input/: bam.rs  fastq.rs  mod.rs
