[package]
name = "crazyqc"
version = "0.1.0"
authors = ["Pierre Marijon <pierre.marijon-ext@aphp.fr>"]
edition = "2018"

description = "A crazily fast tools to compute small set of sequence quality control"

homepage = "https://github.com/natir/crazyqc"
repository = "https://github.com/natir/crazyqc"
documentation = "https://natir.github.io/crazyqc/crazyqc"

readme = "Readme.md"
license-file = "LICENSE"

keywords = ["bioinformatics", "qualitycontrol"]

default-run = "crazyqc"

publish = false # this crate haven't his place in crates.io


[lib]
name = "crazyqc"


[dependencies]
# cli management
clap       = "3.0.0-beta.2"

# paralelle stuff
rayon      = "1"

# input output management
niffler    = "2"
noodles    = { version = "0.1", features = ["bam", "fastq"] }

# Logging and error management
log        = "0.4"
anyhow     = "1"
thiserror  = "1"
env_logger = "0.8"


[dev-dependencies]
tempfile   = "3"
noodles    = { version = "0.1", features = ["bam", "fastq", "sam"] }


[profile.release]
debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false
